--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "node-fetch-npm": "^2.0.4",
     "nodemon": "^2.0.20",
